portal/static/css/portal.css
/* ... */
.btn-tnth-primary.disabled {
  opacity: 0.65;
  cursor: not-allowed;
}
.btn-tnth-primary.disabled:hover {
  color: #fff;
  background-color: #79815D;
  border-color: #79815D;
  text-decoration:none;
}
.btn-tnth-back {
  color: #777;
  padding: 0 5px 0 0;
}
.separator-horizontal,
.separator-vertical {
  position: relative;
  text-transform: uppercase;
  text-align: center;
  color: #000;
  font-weight: bold;
  display: block;
  padding: 0;
}
.separator-horizontal:before,
.separator-vertical:before {
  content: '';
  display: block;
  position: absolute;
  border-style: solid;
  border-color: #C4C6C7;
}
.separator-horizontal > span,
.separator-vertical > span {
  background: #FFF;
  display: inline-block;
}
.separator-vertical {
  height: 100%;
  margin: 0 2em;
}
.separator-vertical:before {
  left: 50%;
  margin-left: -1px;
  height: 100%;
  border-width: 0 0 0 1px;
}
.separator-vertical > span {
  height: 3em;
  line-height: 3em;
  width: 4em;
  position: absolute;
  top: 50%;
  left: 50%;
  margin-top: -1.5em;
  margin-left: -2em;
}
.tnth-form .form-group > label {
  font-size: 18px;
  color: #777;
}
.form-with-floats .form-group > label {
  font-size: 18px;
  color: #aaa;
  opacity: 0;
}
.form-with-floats .form-group > label.after-load {
  transition: all 0.1s linear;
  opacity: 1;
}
.form-with-floats .float-input-label {
  position: relative;
  margin-top: 30px;
}
.form-with-floats .float-input-label > label {
  position: absolute;
  top: 7px;
  left: 13px;
  opacity: 0;
}
.form-with-floats .float-input-label > label.after-load {
  transition: all 0.1s linear;
  opacity: 1;
}
.form-with-floats .float-input-label > label.show {
  top: -24px;
  left: 0;
}
/** styles specific to profile **/
.loading-indicator {
  display: none;
  position: fixed;
  top: 200px;
  left: 48%;
  margin-left: -50px;
  width: 100px;
  height: 100px;
  text-align: center;
  z-index: 99999;
  color: #444;
}
.loading {
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
  filter: alpha(opacity=40);
  -moz-opacity: 0.4;
  -khtml-opacity: 0.4;
  opacity: 0.4;
}
/** Spacing for mainNav area so rest of page that doesn't get pushed down if portal_wrapper takes awhile to load **/
#mainNav {
  height: 71px;
}
#tnthNavWrapper {
  display: none;
}
/** Responsive sizes **/
@media (max-width: 480px) {
  #footerLockup {
    max-height: 80px;
  }
  #homeFooter {
    font-size: 14px;
    padding-top: 0.5em;
  }
  .text-on-img {
    padding: 6px;
  }
  .text-on-img .tnth-subhead {
    margin: 0;
  }
  .text-on-img p:last-child {
    margin-bottom: 0;
  }
}
@media (min-width: 768px) {
  #mainNav {
    height: 135px;
  }
  #fullSizeBox {
    background-image: none;
    min-height: auto;
  }
  #fullSizeBox > img {
    width: 100%;
  }
  #fullSizeContainer {
    padding: 24px 0;
  }
  #wellContainer {
    padding: 24px 24px 80px;
  }
  #fullSizeLogo {
    height: 80px;
  }
  .tnth-well {
    padding: 24px;
  }
  .tnth-splash .headline {
    font-weight: bold;
    font-size: 28px;
    margin-bottom: 1em;
  }
  .tnth-splash .feature-btn-primary {
    margin-top: 1em;
    font-weight: bold;
    padding: 6px 24px;
    font-size: 22px;
  }
  .tnth-splash-bottom-link {
    font-size: 24px;
  }
}
@media (min-width: 992px) {
  /** Font sizes changes above 992 **/
  body {
    font-size: 24px;
  }
  .tnth-headline {
    font-size: 32px;
  }
  .tnth-subhead {
    font-size: 29px;
  }
  #fullSizeContainer {
    padding: 30px 0;
  }
  #wellContainer {
    padding: 30px 30px 90px;
  }
  #fullSizeLogo {
    height: 90px;
  }
  .tnth-well {
    padding: 30px;
  }
  .btn-set {
    margin-bottom: 2em;
  }
  .btn-set .btn {
    margin-bottom: 1em;
  }
  .tnth-splash .headline {
    font-size: 32px;
  }
  .pos-bottom-md {
    position: absolute;
    bottom: 0;
    right: 0;
  }
  .pos-bottom-md .btn {
    margin: 0 0 15px 15px;
  }
  .form-group input[type=checkbox],
  .form-group input[type=radio] {
    margin-top: 9px;
  }
  /** Unless explicitly wrapped in reduce-font-sizes class **/
  body .reduce-font-sizes {
    font-size: 18px;
  }
  .reduce-font-sizes .tnth-headline {
    font-size: 24px;
  }
  .reduce-font-sizes .tnth-subhead {
    font-size: 22px;
  }
  .reduce-font-sizes .form-group input[type=checkbox],
  .reduce-font-sizes .form-group input[type=radio] {
    margin-top: 4px;
  }
}
@media (min-width: 1200px) {
  #fullSizeContainer {
    padding: 60px 0 60px;
  }
  #wellContainer {
    padding: 60px 60px 100px;
  }
  #fullSizeLogo {
    height: 100px;
  }
  .tnth-well {
    padding: 60px;
  }
  .tnth-splash .headline {
    margin: -1em 0 1.5em;
  }
  .profile-img {
    margin-top: -100px;
  }
  .profile-img img {
    width: 120px;
    border-radius: 60px;
  }
  .btn-set {
    margin-bottom: 1em;
  }
  .btn-set .btn {
    margin-bottom: 0.5em;
  }
}
@media (min-width: 1400px) {
  html,
  body {
    width: 100%;
    height: 100%;
  }
  #mainHolder.vertical-center {
    display: table;
    height: 100%;
    margin: 0 auto;
  }
  #mainHolder.vertical-center #mainDiv {
    display: table-cell;
    text-align: center;
    /* horizontal */
    vertical-align: middle;
    /* vertical */
  }
  #fullSizeBox {
    margin: 0 auto;
    max-width: 1400px;
  }
  #homeFooter {
    max-width: 1400px;
    margin: 0 auto;
  }
  .btn-set {
    margin-bottom: 1em;
  }
  .btn-set .btn {
    margin-bottom: 0.5em;
  }
}
/*** https://github.com/lipis/bootstrap-social ***/
.btn-social {
  position: relative;
  padding-left: 44px;
  text-align: left;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
.btn-social > :first-child {
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  width: 32px;
  line-height: 39px;
  font-size: 1.6em;
  text-align: center;
  border-right: 1px solid rgba(0, 0, 0, 0.2);
}
.btn-social.btn-lg {
  padding-left: 61px;
}
.btn-social.btn-lg > :first-child {
  line-height: 45px;
  width: 45px;
  font-size: 1.8em;
}
.btn-social.btn-sm {
  padding-left: 38px;
}
/* ... */

